# python-predictor-app

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/routes/: users.py
app/core/: security.py
app/db/: database.py  init_db.py
app/models/: user.py
app/schemas/: user.py
tests/: conftest.py  test_users.py
