[tool.poetry]
name = "python-predictor-app"
version = "0.1.0"
description = "Football tournament prediction game backend"
authors = ["upstreamcommit"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.137.1"
uvicorn = "^0.49.0"
sqlalchemy = "^2.0.51"
pydantic-settings = "^2.14.1"
python-jose = "^3.5.0"
passlib = "^1.7.4"
python-multipart = "^0.0.32"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.0"
httpx = "^0.28.1"
ruff = "^0.15.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
